tests/snapshots/integration_config__config_cmake_full.snap
---
source: tests/integration_config.rs
expression: config.cmake
---
install_message: lazy
host: x64
