tests/snapshots/integration_config__config_cmake_host.snap
---
source: tests/integration_config.rs
expression: config.cmake
---
install_message: never
host: x64
